--- a/index.html
+++ b/index.html
@@ -57,6 +57,45 @@
             </div>
         </section>
         <!-- /.features -->
+
+        <!-- Monthly favorites -->
+        <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">#</th>
+                <th scope="col">Name</th>
+                <th scope="col">Origin</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Whiskey Brand 1</td>
+                <td>Conutry 1</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Whiskey Brand 2</td>
+                <td>Conutry 2</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Whiskey Brand 3</td>
+                <td>Conutry 3</td>
+              </tr>
+              <tr>
+                <th scope="row">4</th>
+                <td>Whiskey Brand 4</td>
+                <td>Conutry 4</td>
+              </tr>
+              <tr>
+                <th scope="row">5</th>
+                <td>Whiskey Brand 5</td>
+                <td>Conutry 5</td>
+              </tr>
+            </tbody>
+        </table>        
+
     </article>
 </body>
 
