filling blanks in country fields

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 
         <!-- Monthly favorites -->
         <table class="table">
+            <h3>Monthly favorites</h3>
             <thead>
               <tr>
                 <th scope="col">#</th>
