--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <article class="container">
         <!-- Callout -->
+        <div class="row">
         <section class="callout">
             <h1>The finest whiskeys delivered to your doorstep.</h1>
             <p class="lead">Sign up today to start receiving the world's best whiskeys every month. 
@@ -18,12 +19,16 @@
             <button class="btn btn-success btn-lg">Sign Up!</button>
             <p class="text-muted"><small>You must be over 18 to sign up our service. Please, drink responsibly</small></p>
         </section>
+      </div>
         <!-- /.callout -->
         <hr>
 
         <!-- Quotes -->
         <section class="quotes">
+          <div class="row">
             <h2 class="text-uppercase">Quotes:</h2>
+          </div>
+          <div class="row">
             <blockquote class="blockquote">
                 <p>I've been introduced to more than 10 great international whiskeys I never knew about.</p>
                 <p>- Jane Doe</p>
@@ -32,28 +37,33 @@
                 <p>I haven't been sober for months!</p>
                 <p>- Jane Doe</p>
             </blockquote>
+          </div>
         </section>
         <!-- /.quotes -->
         <hr>
 
         <!-- Features -->
         <section class="features">
+          <div class="row">
             <h2 class="text-uppercase">Features:</h2>
-            <div class="feature">
-                <h3>Feature 1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
-            </div>
-            <div class="feature">
-                <h3>Feature 2</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>            
-            </div>
-            <div class="feature">
-                <h3>Feature 3</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <p><a class="btn btn-sm btn-light" href="">Read More</a></p>            
-            </div>
+          </div>
+          <div class="row">
+              <div class="feature">
+                  <h3>Feature 1</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <p><a class="btn btn-sm btn-light" href="">Read More</a></p>
+              </div>
+              <div class="feature">
+                 <h3>Feature 2</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <p><a class="btn btn-sm btn-light" href="">Read More</a></p>            
+              </div>
+              <div class="feature">
+                  <h3>Feature 3</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                  <p><a class="btn btn-sm btn-light" href="">Read More</a></p>            
+              </div>
+          </div>  
         </section>
         <!-- /.features -->
 
